Fix spacing of made with in footer

--- a/src/Components/Footer/style.scss
+++ b/src/Components/Footer/style.scss
@@ -14,6 +14,10 @@
 .footer a {
     text-decoration: none;
     color: #fff;
+    font-weight: normal;
+}
+
+.footer a span {
     font-weight: bold;
 }
 
